# Relay

./: .gitignore  Dockerfile  README.md  app.py  client.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  rooms.py
accounts/: apps.py
chats/: apps.py  consumers.py  tests.py  urls.py  views.py  ws_urls.py
constants/: prefixs.py
logger/: logger.py
memebers/: models.py  urls.py  views.py
models/: primarys.py
relay/: asgi.py  settings.py  urls.py  wsgi.py
rooms/: apps.py  models.py  urls.py  views.py
